Fix spacing on non-category archives (#288)
* Archives: Apply spacing to all archive pages

* Add spacing between archive type & label

* Update source/wp-content/themes/wporg-news-2021/sass/post/_content.scss

--- a/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
@@ -23,6 +23,12 @@
 	}
 }
 
+body.archive .site-content-container {
+	padding-left: var(--wp--custom--alignment--edge-spacing);
+	padding-right: var(--wp--custom--alignment--edge-spacing);
+	padding-bottom: var(--wp--custom--alignment--edge-spacing);
+}
+
 body.news-posts-index .site-content-container,
 body.archive .site-content-container,
 body.search .site-content-container,
