--- a/source/wp-content/themes/wporg-news-2021/sass/components/local-header/_breadcrumbs.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/components/local-header/_breadcrumbs.scss
@@ -28,6 +28,10 @@
 				margin: 0 0.5rem;
 				border-radius: 2px;
 			}
+
+			span {
+				margin-left: 0.5ch;
+			}
 		}
 	}
 }
